Removed old commands and renamed new commands package